[gd_scene load_steps=9 format=3 uid="uid://dw7isrcpo28gr"]

[ext_resource type="Script" path="res://PrototypeLevels/hallway.gd" id="1_e8e6x"]
[ext_resource type="PackedScene" uid="uid://dkoaycpofp2y0" path="res://Scripts/Taby Scripts/stickplayer.tscn" id="2_4qndj"]
[ext_resource type="Texture2D" uid="uid://cbpaakn38axbn" path="res://Assets/Taby Assets/study.png" id="2_b2ouj"]
[ext_resource type="Texture2D" uid="uid://chkvv4pcjbste" path="res://Assets/Taby Assets/door.png" id="3_abag3"]
[ext_resource type="FontFile" uid="uid://cjgtqv4nsp8pj" path="res://ascii-sector-16x16-tileset.ttf" id="4_egvlc"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_vwjh5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ncs0"]
size = Vector2(99, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u7565"]
size = Vector2(53, 47)

[node name="Hallway" type="Node2D"]
script = ExtResource("1_e8e6x")

[node name="stickplayer" parent="." instance=ExtResource("2_4qndj")]
z_index = 3
position = Vector2(86, -30)

[node name="Camera2D" type="Camera2D" parent="stickplayer"]
position = Vector2(-9, 34)
zoom = Vector2(2, 2)

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(36, 37)
shape = SubResource("WorldBoundaryShape2D_vwjh5")

[node name="HomeworkBox" type="Area2D" parent="."]
position = Vector2(-81, 7)

[node name="Sprite2D" type="Sprite2D" parent="HomeworkBox"]
position = Vector2(-21, -16)
texture = ExtResource("2_b2ouj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HomeworkBox"]
position = Vector2(-27.5, 3.5)
shape = SubResource("RectangleShape2D_3ncs0")

[node name="HomeworkHintLabel" type="Label" parent="."]
visible = false
offset_left = -186.0
offset_top = -12.0
offset_right = -18.0
offset_bottom = 11.0
theme_override_fonts/font = ExtResource("4_egvlc")
theme_override_font_sizes/font_size = 8
text = "Ready to do homework?"

[node name="BedroomDoor" type="Area2D" parent="."]
position = Vector2(86, -30)

[node name="Sprite2D" type="Sprite2D" parent="BedroomDoor"]
position = Vector2(0, 3)
texture = ExtResource("3_abag3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BedroomDoor"]
position = Vector2(1, 39)
shape = SubResource("RectangleShape2D_u7565")

[node name="BedroomLabel" type="Label" parent="BedroomDoor"]
offset_left = -53.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("4_egvlc")
theme_override_font_sizes/font_size = 8
text = "Bedroom"
horizontal_alignment = 1

[connection signal="body_entered" from="HomeworkBox" to="." method="_on_homework_box_body_entered"]
[connection signal="body_exited" from="HomeworkBox" to="." method="_on_homework_box_body_exited"]
[connection signal="body_entered" from="BedroomDoor" to="." method="_on_bedroom_door_body_entered"]
[connection signal="body_exited" from="BedroomDoor" to="." method="_on_bedroom_door_body_exited"]
